feat(school-admin): manage ranking publication